# sdpa-gmp

./: AUTHORS  ChangeLog  Dockerfile_ubuntu22.04  Makefile.am  Makefile.in  README.md  configure  configure.ac  configure.in  example1.result  gmpxx_mkII.h  param.sdpa  sdpa_algebra.h  sdpa_chordal.cpp  sdpa_chordal.h  sdpa_dataset.cpp  sdpa_dataset.h  sdpa_include.h  sdpa_io.cpp  sdpa_io.h  sdpa_jordan.cpp  sdpa_jordan.h  sdpa_linear.cpp  sdpa_linear.h  sdpa_main.cpp  sdpa_newton.cpp  sdpa_newton.h  sdpa_parts.cpp  sdpa_parts.h  sdpa_right.h  sdpa_struct.cpp  sdpa_struct.h  sdpa_tool.cpp  sdpa_tool.h
SDPLIB/: annotation_arch4.txt  arch0.result  arch2.result  arch4.result  arch8.result  control10.result  control11.result  control4.result  control5.result  control8.result  control9.result  go.sh  go2.sh  go2_perf.sh  go_perf.sh~  param.sdpa  report_arch0.txt  report_arch2.txt  report_arch4.txt  report_arch8.txt  report_control10.txt  report_control11.txt  report_control4.txt  report_control5.txt  report_control8.txt  report_control9.txt
SDPLIB/data/: arch0.dat-s.xz  arch0.result.xz  arch2.dat-s.xz  arch2.result.xz  arch4.dat-s.xz  arch4.result.xz  arch8.dat-s.xz  arch8.result.xz  control1.dat-s.xz  control1.result.xz  control10.dat-s.xz  control10.result.xz  control11.dat-s.xz  control11.result.xz  control2.dat-s.xz  control2.result.xz  control3.dat-s.xz  control3.result.xz  control4.dat-s.xz  control4.result.xz  control5.dat-s.xz  control5.result.xz  control6.dat-s.xz  control6.result.xz  control7.dat-s.xz  control7.result.xz  control8.dat-s.xz  control8.result.xz  control9.dat-s.xz  control9.result.xz  equalG11.dat-s.xz  equalG51.dat-s.xz  gpp100.dat-s.xz  gpp100.result.xz  gpp124-1.dat-s.xz  gpp124-1.result.xz  gpp124-2.dat-s.xz  gpp124-2.result.xz  gpp124-3.dat-s.xz  gpp124-3.result.xz  (+134 more)
mpack/: Raxpy_omp.cpp  Rcopy_omp.cpp  Rdot_omp.cpp  Rgemm_NN_omp.cpp  Rgemm_NT_omp.cpp  Rgemm_TN_omp.cpp  Rgemm_TT_omp.cpp  Rgemm_omp.cpp  Rgemv.cpp  Rger.cpp  Rlascl.cpp  Rlatrd.cpp  Rorgql.cpp  Rorgqr.cpp  Rorgtr.cpp  Rpotrf.cpp  Rsyev.cpp  Rsymv.cpp  Rsyr2.cpp  Rsyr2k.cpp  Rsyrk.cpp  Rsytrd.cpp  Rtrmm.cpp  Rtrsm.cpp  iMlaenv.cpp
mplapack/: Makefile  Mlsame.cpp  Mutils.cpp  Mxerbla.cpp  Raxpy.cpp  Raxpy_omp.cpp  Rcombssq.cpp  Rcopy.cpp  Rcopy_omp.cpp  Rdot.cpp  Rdot_omp.cpp  Rdot_serial.cpp  Rgemm.cpp  Rgemm_NN_omp.cpp  Rgemm_NN_omp_benchmark.cpp  Rgemm_NT_omp.cpp  Rgemm_TN_omp.cpp  Rgemm_TT_omp.cpp  Rgemm_omp.cpp  Rgemv.cpp  Rger.cpp  Risnan.cpp  Rlae2.cpp  Rlaev2.cpp  Rlaisnan.cpp  Rlamch.cpp  Rlanst.cpp  Rlansy.cpp  Rlapy2.cpp  Rlarf.cpp  Rlarfb.cpp  Rlarfg.cpp  Rlarft.cpp  Rlartg.cpp  Rlascl.cpp  Rlaset.cpp  Rlasr.cpp  Rlasrt.cpp  Rlassq.cpp  Rlatrd.cpp  (+33 more)
spooles/: Makefile
spooles/patches/: patch-Make.inc
